Prefix routes for app hosted in a multiple app configuration where apps are not hosted on subdomains.

--- a/lib/templates/partials/header.html
+++ b/lib/templates/partials/header.html
@@ -1,3 +1,4 @@
-<h1>{{siteName}}</h1>
-<p>Running on port <strong>{{port}}</strong> in <strong>{{env}}</strong> on address <strong>{{root}}</strong></p>
-<a href="/">Home</a> / <a href="/1">Page 1</a> / <a href="/2">Page 2</a>
+<h1>{{name}}</h1>
+<p>Running on port <strong>{{port}}</strong> in environment <strong>{{env}}</strong> on ip <strong>{{ip}}</strong></p>
+<p>BaseUrl: {{baseUrl}}</p>
+<a href="{{baseUrl}}">Home</a> / <a href="{{baseUrl}}/1">Page 1</a> / <a href="{{baseUrl}}/2">Page 2</a>
