--- a/lib/templates/views/errors/500.html
+++ b/lib/templates/views/errors/500.html
@@ -3,5 +3,6 @@
 	<div class="container">
 		<h1>Error (500)</h1>
 		<p class="lead">Sorry, the site has encountered an error.</p>
+        <p>{{err.stack}}</p>
 	</div>
 {% endblock %}
