--- a/lib/templates/views/errors/404.html
+++ b/lib/templates/views/errors/404.html
@@ -2,6 +2,8 @@
 {% block body %}
 	<div class="container">
 		<h1>404</h1>
+        <h4>{{err.url}}</h4>
 		<p class="lead">Sorry, the page you requested can't be found.</p>
+        <p>{{err.stack}}</p>
 	</div>
 {% endblock %}
